[gd_scene load_steps=4 format=3 uid="uid://dkpdan17o8x1l"]

[ext_resource type="Script" path="res://maze_block.gd" id="1_4ffp3"]
[ext_resource type="PackedScene" uid="uid://8ggdbjul8d5x" path="res://corner.tscn" id="1_lfmuq"]
[ext_resource type="PackedScene" uid="uid://8jlfvxcekk5b" path="res://hedge_wall.tscn" id="2_1rctd"]

[node name="MazeBlock" type="Node3D"]
script = ExtResource("1_4ffp3")

[node name="HedgeCornerNE" parent="." instance=ExtResource("1_lfmuq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9, 0, -1.9)

[node name="HedgeCornerSE" parent="." instance=ExtResource("1_lfmuq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9, 0, 1.9)

[node name="HedgeCornerNW" parent="." instance=ExtResource("1_lfmuq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9, 0, -1.9)

[node name="HedgeCornerSW" parent="." instance=ExtResource("1_lfmuq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9, 0, 1.9)

[node name="HedgeWallN" parent="." instance=ExtResource("2_1rctd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9)

[node name="HedgeWallS" parent="." instance=ExtResource("2_1rctd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.9)

[node name="HedgeWallE" parent="." instance=ExtResource("2_1rctd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.9, 0, 0)

[node name="HedgeWallW" parent="." instance=ExtResource("2_1rctd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.9, 0, 0)
